# compare_tool

./: .gitignore  README.md  compare_tool.spec  pyproject.toml
.github/workflows/: build-windows.yml  performance.yml  quality.yml
docs/: RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md
src/compare_tool/: __init__.py  __main__.py  _version.py  comparer.py  csv_compare.py  errors.py  excel.py  gui.py  json_compare.py  models.py  settings.py  usecase.py  workbook_preparer.py  xml_compare.py
tests/: test_acceptance.py  test_excel.py  test_json_compare.py  test_performance.py  test_version.py  test_xml_compare.py
tools/: create_sample_files.py  run_gui.py
