[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-tool"
version = "0.1.0"
description = "Extensible desktop tool for comparing Excel workbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1,<4",
  "tkinterdnd2>=0.4,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.gui-scripts]
compare-tool = "compare_tool.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

