[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-tool"
version = "0.1.0"
description = "Extensible desktop tool for comparing Excel workbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1,<4",
  "tkinterdnd2>=0.4,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
dev = [
  "mypy>=1.11,<2",
  "pyinstaller>=6.11,<7",
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.gui-scripts]
compare-tool = "compare_tool.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not performance'"
markers = [
  "performance: opt-in tests for large or pathologically sparse workbooks",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "tools"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
